<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="580dp"
    android:background="@color/dialog"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTitleChooseColors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Elige un color"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgColors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleChooseColors">

        <RadioButton
            android:id="@+id/rbWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/white"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:buttonTint="@color/white" />

        <RadioButton
            android:id="@+id/rbRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:buttonTint="@color/red" />

        <RadioButton
            android:id="@+id/rbOrange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orange"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:buttonTint="@color/orange" />

        <RadioButton
            android:id="@+id/rbYellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yellow"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:buttonTint="@color/yellow" />

        <RadioButton
            android:id="@+id/rbGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:buttonTint="@color/green" />

        <RadioButton
            android:id="@+id/rbCyan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cyan"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:buttonTint="@color/cyan" />

        <RadioButton
            android:id="@+id/rbBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blue"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:buttonTint="@color/blue" />

        <RadioButton
            android:id="@+id/rbViolet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/violet"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:buttonTint="@color/violet" />

        <RadioButton
            android:id="@+id/rbGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gray"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:buttonTint="@color/gray" />

        <RadioButton
            android:id="@+id/rbBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="27dp"
            android:text="@string/black"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:buttonTint="@color/black" />

    </RadioGroup>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvApplyColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/app"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Aplicar color"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>